--- a/src/Styles/_config.scss
+++ b/src/Styles/_config.scss
@@ -5,9 +5,9 @@
 $background-Black: #000;
 $text-White: rgb(214, 215, 216);
 $nav-BorderBottom: rgb(25, 25, 25);
-$secondary-Purple: rgb(9, 14, 169);
+$secondary-Purple: #0000ff;
 $description-White: rgb(151, 157, 169);
-$link-Hover: rgb(22, 6, 128);
+$link-Hover: rgb(10, 16, 200);
 //Light Mode Colors
 $background-White: rgb(249, 250, 251);
 $text-Black: rgb(0, 0, 0);
@@ -15,7 +15,7 @@ $description-Black: rgb(156, 163, 175);
 
 //"Sixtus"
 %sixtus-Tag {
-  font-size: 21px;
+  font-size: 24px;
   line-height: 28px;
   color: $secondary-Purple;
   font-weight: 400;
