--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -29,6 +29,7 @@
       .resume {
         border: 1px solid $secondary-Purple;
         padding: 4px 7px;
+        background-color: $secondary-Purple;
         border-radius: 4px;
 
         &:hover {
