--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -119,6 +119,7 @@
         .inner-Links-Body {
           .res {
             border: 1px solid $secondary-Purple;
+            background-color: $secondary-Purple;
             padding: 3px 5px;
             border-radius: 5px;
           }
