--- a/src/Styles/_config.scss
+++ b/src/Styles/_config.scss
@@ -7,7 +7,7 @@ $text-White: rgb(214, 215, 216);
 $nav-BorderBottom: rgb(25, 25, 25);
 $secondary-Purple: #0000ff;
 $description-White: rgb(151, 157, 169);
-$link-Hover: rgb(10, 16, 200);
+$link-Hover: #040771;
 //Light Mode Colors
 $background-White: rgb(249, 250, 251);
 $text-Black: rgb(0, 0, 0);
