--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -33,6 +33,7 @@
 
         &:hover {
           border: 1.5px solid $secondary-Purple;
+          background-color: $secondary-Purple;
         }
       }
 
