--- a/src/Styles/footer.scss
+++ b/src/Styles/footer.scss
@@ -116,6 +116,7 @@ footer {
       }
       .all-Rights-Container {
         flex-direction: column !important;
+        text-align: center;
         .rights-Reserved {
           span {
             svg {
