--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -1,7 +1,7 @@
 @import "./config";
 
 .header-Container {
-  height: 100%;
+  // height: 100%;
   position: sticky;
   z-index: 3;
   @include display();
@@ -168,6 +168,7 @@
             .rights-Reserved {
               width: auto;
               height: auto;
+              text-align: center;
               @include display($justify: unset);
               gap: 4px;
               span {
@@ -192,10 +193,8 @@
 
 #open {
   display: flex !important;
+  width: 100% !important;
 }
 #close {
   display: none !important;
-}
-#open {
-  width: 100% !important;
 }
