--- a/src/Styles/_config.scss
+++ b/src/Styles/_config.scss
@@ -5,9 +5,10 @@
 $background-Black: #000;
 $text-White: rgb(214, 215, 216);
 $nav-BorderBottom: rgb(25, 25, 25);
+$sub-blue: #1417b7;
 $secondary-Purple: #0000ff;
 $description-White: rgb(151, 157, 169);
-$link-Hover: #040771;
+$link-Hover: #060b9c;
 //Light Mode Colors
 $background-White: rgb(249, 250, 251);
 $text-Black: rgb(0, 0, 0);
