--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -1,16 +1,15 @@
 @import "./config";
 
 .header-Container {
-  // height: 100%;
   position: sticky;
   z-index: 3;
   @include display();
   border-bottom: $nav-BorderBottom;
-  background: rgba(39, 37, 37, 0.17);
+  background: var(--nav-bg);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5.6px);
   -webkit-backdrop-filter: blur(5.6px);
-  border-bottom: 1px solid rgba(154, 154, 154, 0.28);
+  border-bottom: 1px solid var(--border);
   border-top: 1.5px solid $secondary-Purple;
   .desktop-Nav-Container {
     height: 100%;
@@ -25,10 +24,10 @@
       width: auto;
       @include display($justify: unset);
       gap: 50px;
-      
+
       .svg {
         width: auto;
-        color: $background-White;
+        color: var(--text-color);
         cursor: pointer;
       }
 
@@ -94,7 +93,7 @@
         gap: 30px;
 
         .svg {
-          color: $background-White;
+          color: var(--text-color);
           cursor: pointer;
         }
       }
@@ -107,7 +106,7 @@
       width: 100vw;
       height: 100vh;
       @include display($direction: column, $justify: unset);
-      background-color: $background-Black;
+      background-color: var(--background-color);
 
       .mobile-Container-Two {
         width: 90%;
@@ -124,7 +123,7 @@
         }
         .svg {
           width: auto;
-          color: $background-White;
+          color: var(--text-color);
         }
       }
       .links-Body {
@@ -136,6 +135,7 @@
             background-color: $secondary-Purple;
             padding: 3px 5px;
             border-radius: 5px;
+            color: white;
           }
           width: 90%;
           padding-top: 5%;
@@ -144,7 +144,7 @@
           a {
             width: auto;
             font-size: 18px;
-            color: #f3f4f6;
+            color: var(--text-color);
             line-height: 25px;
             font-weight: 400;
             text-decoration: none;
@@ -158,7 +158,7 @@
             width: auto;
             height: 20%;
             svg {
-              color: $background-White;
+              color: var(--text-color);
               width: 25px;
               height: 25px;
             }
@@ -174,7 +174,7 @@
               font-weight: 400;
               font-size: 11px;
               line-height: 14px;
-              color: $text-White;
+              color: var(--text-color);
               text-decoration: none;
               cursor: default;
               transition: all 0.5s ease;
