--- a/src/Styles/_config.scss
+++ b/src/Styles/_config.scss
@@ -9,12 +9,30 @@ $sub-blue: #1417b7;
 $secondary-Purple: #0000ff;
 $description-White: rgb(151, 157, 169);
 $link-Hover: #060b9c;
-//Light Mode Colors
-$background-White: rgb(249, 250, 251);
-$text-Black: rgb(0, 0, 0);
-$description-Black: rgb(156, 163, 175);
+$description-Black: rgb(138, 142, 149);
 
-//"Sixtus"
+$light-background: #ffffff;
+$light-text: #000000;
+$light-nav-bg: rgba(255, 255, 255, 0.17);
+
+$themes: (
+  light: (
+    background: $light-background,
+    text: $light-text,
+    nav-bg: rgba(255, 255, 255, 0.17),
+    border: rgba(0, 0, 0, 0.1),
+    description: $description-Black,
+  ),
+  dark: (
+    background: $background-Black,
+    text: $text-White,
+    nav-bg: rgba(39, 37, 37, 0.17),
+    border: rgba(154, 154, 154, 0.28),
+    description: $description-White,
+  ),
+);
+
+
 %sixtus-Tag {
   font-size: 24px;
   line-height: 28px;
@@ -38,12 +56,12 @@ $description-Black: rgb(156, 163, 175);
   font-weight: 400;
   font-size: 12px;
   line-height: 18px;
-  color: $text-White;
+  color: var(--text-color);
   text-decoration: none;
   cursor: default;
   transition: all 0.5s ease;
   &:hover {
-    color: white;
+    color: var(--text-color);
     transition: all 0.5s ease;
   }
   cursor: pointer;
@@ -56,7 +74,7 @@ $description-Black: rgb(156, 163, 175);
   font-weight: 800;
   font-size: 51px;
   line-height: 73px;
-  color: $text-White;
+  color: var(--text-color);
   padding-left: 25px;
 }
 
@@ -67,7 +85,7 @@ $description-Black: rgb(156, 163, 175);
   font-weight: 400;
   font-size: 16px;
   line-height: 32px;
-  color: $text-White;
+  color: var(--text-color);
   padding-left: 25px;
 }
 
@@ -77,7 +95,7 @@ $description-Black: rgb(156, 163, 175);
   font-weight: 800;
   font-size: 21px;
   line-height: 73px;
-  color: $text-White;
+  color: var(--text-color);
 }
 
 //Utilities
