--- a/src/Styles/footer.scss
+++ b/src/Styles/footer.scss
@@ -3,7 +3,7 @@
 footer {
   width: 100%;
   height: 700px;
-  background-color: $background-Black;
+  background-color: var(--background-color);
   @include display($align: unset);
   .footer-Container {
     width: 75%;
@@ -12,6 +12,9 @@ footer {
       $align: space-between,
       $justify: space-around
     );
+    background-color: var(--background-color);
+    color: var(--text-color);
+    border-top: 1px solid var(--border);
 
     .contact {
       height: 80%;
@@ -45,7 +48,7 @@ footer {
         gap: 15px;
         height: 80px;
         small {
-          color: $description-White;
+          color: var(--description-color);
           font-family: "IBM Plex Mono", -apple-system, BlinkMacSystemFont,
             "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
             "Helvetica Neue", sans-serif;
@@ -59,6 +62,7 @@ footer {
             width: 30px;
             @extend %Links;
             font-size: 25px;
+            color: var(--text-color);
           }
         }
       }
@@ -70,6 +74,7 @@ footer {
         @extend %Links;
         cursor: default;
         font-size: 11px;
+        color: var(--description-color);
       }
       .rights-Reserved {
         width: auto;
@@ -77,10 +82,6 @@ footer {
         gap: 7px;
         span {
           width: auto;
-          svg {
-            width: 13px;
-            height: 13px;
-          }
         }
       }
       .built {
