Tweaks yet again

--- a/src/Styles/Header.scss
+++ b/src/Styles/Header.scss
@@ -39,6 +39,7 @@
         &:hover {
           border: 1.5px solid $secondary-Purple;
           background-color: $secondary-Purple;
+          color: white;
         }
       }
 
