--- a/src/Styles/LandingPage.scss
+++ b/src/Styles/LandingPage.scss
@@ -122,7 +122,7 @@
                     line-height: 20px;
                     @extend %element-Tags;
                     font-size: 15px;
-                    color: $sub-blue;
+                    font-weight: 500;
                     font-family: "IBM Plex Mono", -apple-system,
                       BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu,
                       Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -326,6 +326,7 @@
         .project {
           width: 100%;
           height: 100%;
+          padding: 15px;
           border: var(--border-width) solid $link-Hover;
           border-radius: 5px;
           @include display($align: unset);
@@ -333,13 +334,11 @@
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-duration: 0.5s;
           .inner-Project-Container {
-            width: 95%;
             @include display($direction: column, $justify: space-between);
             gap: 10px;
 
             .img {
               z-index: 0;
-              margin-top: 15px;
               width: 100%;
               height: 360px;
               object-fit: cover;
@@ -388,11 +387,12 @@
                 @extend %Intro-Ptag;
                 padding-left: 0;
                 line-height: 28px;
+                margin-bottom: 5px;
               }
             }
             .git-View {
               @include display($justify: unset);
-              padding-bottom: 20px;
+              padding-bottom: 5px;
               gap: 5px;
               a:nth-child(1) {
                 width: 30px;
@@ -494,9 +494,12 @@
       width: 103% !important;
       grid-template-columns: repeat(1, 1fr) !important;
       .inner-Project-Container {
-        gap: 10px !important;
         .img {
           height: 100% !important;
+        }
+
+        .git-View {
+          padding-bottom: 0px !important;
         }
       }
     }
@@ -509,6 +512,10 @@
         grid-template-columns: repeat(3, 1fr) !important;
       }
     }
+  }
+
+  .git-View {
+    padding-bottom: 0px !important;
   }
 }
 @media screen and (max-width: 530px) {
@@ -609,8 +616,17 @@
       p {
         line-height: 20px !important;
       }
-      .projects-Container .project .inner-Project-Container .description p {
-        font-size: 13px !important;
+
+      .projects-Container .project {
+        padding: 10px !important;
+
+        .inner-Project-Container {
+          gap: 8px !important;
+
+          .description p {
+            font-size: 13px !important;
+          }
+        }
       }
     }
   }
